--- a/assets/css/Addtovar.css
+++ b/assets/css/Addtovar.css
@@ -68,15 +68,15 @@ a {
 
 .hero {
   padding-top: 40px;
+  padding-bottom: 60px;
   background: #eeeef5;
-  height: 100vh;
 }
 .hero .container .hero-box {
-  padding: 45px 25px;
+  padding: 45px 90px;
   background-color: #fff;
   border-radius: 10px;
 }
-.hero .container .hero-box button {
+.hero .container .hero-box .btn1 {
   padding: 14px 15px;
   color: #212121;
   font-size: 14px;
@@ -94,6 +94,26 @@ a {
   width: 764px;
   height: 110px;
   margin-top: 10px;
+}
+.hero .container .hero-box .flex3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 40px;
+  margin-bottom: 50px;
+}
+.hero .container .hero-box .flex3 input {
+  width: 228px;
+  padding: 20px;
+  border: none;
+  margin-top: 10px;
+  outline: none;
+  border-radius: 10px;
+  background: #f6f6fb;
 }
 .hero .container .hero-box .flex2 {
   margin-top: 30px;
@@ -149,7 +169,6 @@ input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 40px 40px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -159,14 +178,15 @@ input {
   gap: 20px;
 }
 .btns .save-tovar {
-  padding: 10px 20px;
+  padding: 10px 40px;
   background: #1bc58d;
   color: white;
   border-radius: 7px;
+  font-family: "Nunito Sans", sans-serif !important;
 }
 .btns .cancel-tovar {
-  padding: 10px 20px;
+  padding: 10px 45px;
   border-radius: 7px;
   background: #f7f7ff;
-  color: #80809b;
+  color: #ff5b53;
 }
