--- a/assets/css/Main.css
+++ b/assets/css/Main.css
@@ -139,6 +139,8 @@ hr {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -214,5 +216,23 @@ hr {
   100% {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 450px) {
+  .hero .container .hero-top .add-tovar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-left: 70px;
+  }
+  .hero .container .hero-top .flex {
+    margin-left: 66px;
+  }
+  .hero .container .hero-top .flex input {
+    margin-top: 20px;
   }
 }
