--- a/src/components/good/main/Main.scss
+++ b/src/components/good/main/Main.scss
@@ -81,7 +81,7 @@ hr {
 .hero {
   padding-top: 40px;
   background: #eeeef5;
-  height: 100%;
+  // height: 100vh;
 
   .container {
     .table-responsive {
