--- a/assets/css/Main.css
+++ b/assets/css/Main.css
@@ -31,12 +31,11 @@
 }
 
 .header {
+  position: sticky;
   right: 0;
   left: 0;
   padding: 24px 0;
   background-color: #fff;
-  -webkit-box-shadow: 0px 0px 10px 2px grey;
-          box-shadow: 0px 0px 10px 2px grey;
   z-index: -10;
   top: 0;
 }
@@ -85,6 +84,7 @@ hr {
 .hero {
   padding-top: 40px;
   background: #eeeef5;
+  width: 100%;
 }
 .hero .container .table-responsive {
   overflow-x: auto;
