--- a/src/components/good/main/Main.scss
+++ b/src/components/good/main/Main.scss
@@ -22,12 +22,13 @@
 }
 
 .header {
-  // margin-top: -750px;
+  // position: fixed;
+  position: sticky;
   right: 0;
   left: 0;
   padding: 24px 0;
   background-color: #fff;
-  box-shadow: 0px 0px 10px 2px grey;
+  // box-shadow: 0px 0px 10px 2px grey;
   // padding-left: 200px;
   // background-color: red;
   z-index: -10;
@@ -82,6 +83,7 @@ hr {
   padding-top: 40px;
   background: #eeeef5;
   // height: 100vh;
+  width: 100%;
 
   .container {
     .table-responsive {
